Change roll and pitch with input fields

--- a/html/index.html
+++ b/html/index.html
@@ -11,11 +11,12 @@
 		</canvas>
 
 		<label for="roll">Roll:</label>
-		<input id="roll" name="roll">
+		<input id="roll-input" name="roll">
 		<br />
 		<label for="pitch">Pitch:</label>
-		<input id="pitch" name="pitch">
+		<input id="pitch-input" name="pitch">
 
-		<script src="main.js"></script>
+		<script src="indicator.js"></script>
+		<script src="input.js"></script>
 	</body>
 </html>
